[gd_scene load_steps=5 format=3 uid="uid://dqhi3idf6syay"]

[ext_resource type="Script" path="res://scenes/ui/lobby/lobby.gd" id="1_5qmws"]
[ext_resource type="PackedScene" uid="uid://cgubbv13lvah8" path="res://scenes/ui/player_info_box.tscn" id="2_r5fd3"]
[ext_resource type="PackedScene" uid="uid://cy2up81bu68aj" path="res://scenes/ui/_elements/CustomLineEdit/custom_line_edit.tscn" id="3_l6cub"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0nkw"]
content_margin_top = 75.0

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qmws")
info_box = ExtResource("2_r5fd3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 100
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_q0nkw")

[node name="PlayerInfoContainer" type="GridContainer" parent="MarginContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
theme_override_constants/h_separation = 25
columns = 2

[node name="LobbyName" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 30.0
offset_right = 241.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 30
text = "LOBBY_LOBBY"
metadata/_edit_lock_ = true

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.0
offset_top = 40.0
offset_right = 46.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="TimeLeft" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 26.0
offset_right = -30.0
offset_bottom = 61.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "1:00"
horizontal_alignment = 2

[node name="MatchmakeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -83.31
offset_right = 102.0
offset_bottom = -40.31
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../UsernameContainer/UsernameEdit")
focus_neighbor_right = NodePath("../LeaveButton")
theme_override_font_sizes/font_size = 25
text = "LOBBY_BTN_SEARCH"
metadata/_edit_lock_ = true

[node name="VoteButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -83.31
offset_right = 102.0
offset_bottom = -40.31
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_right = NodePath("../LeaveButton")
theme_override_font_sizes/font_size = 25
disabled = true
text = "LOBBY_BTN_VOTE"
metadata/_edit_lock_ = true

[node name="LeaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 346.0
offset_top = -83.31
offset_right = 550.0
offset_bottom = -40.31
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../MatchmakeButton")
focus_neighbor_top = NodePath("../UsernameContainer/UsernameEdit")
theme_override_font_sizes/font_size = 25
text = "LOBBY_BTN_BACK"

[node name="VoteTimeout" type="Timer" parent="."]
process_callback = 0
wait_time = 60.0
one_shot = true

[node name="PingBox" type="SpinBox" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_top = 52.0
offset_right = -21.9375
offset_bottom = 83.0
grow_horizontal = 0
max_value = 1000.0
step = 25.0

[node name="UsernameContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -287.0
offset_top = 121.0
offset_right = -37.0
offset_bottom = 161.0
grow_horizontal = 0
alignment = 2

[node name="Username" type="Label" parent="UsernameContainer"]
layout_mode = 2
text = "LOBBY_USERNAME"

[node name="UsernameEdit" parent="UsernameContainer" instance=ExtResource("3_l6cub")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../LeaveButton")
theme_override_font_sizes/font_size = 20
max_chars = 16

[connection signal="pressed" from="MatchmakeButton" to="." method="_on_matchmake_button_pressed"]
[connection signal="pressed" from="VoteButton" to="." method="_on_vote_button_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="timeout" from="VoteTimeout" to="." method="_on_vote_timeout_timeout"]
